# reasonEulerProject

./: .gitignore  README.md  dune-project  package-lock.json  reasonEulerProject.opam
.github/workflows/: test-workflow.yml
.husky/: pre-commit
lib/: dune  reasonEulerProject.re  reasonEulerProject.rei
lib/reList/: reList.re  reList.rei
lib/reUtils/: reUtils.re  reUtils.rei
lib/reZ/: dune  reZ.re  reZ.rei
lib/reasonEulerProject/: dune  reasonEulerProject.re  reasonEulerProject.rei
test/: dune  reasonEulerProject.re  reasonEulerProjectTest.re
